      "load weapon sprite", "replace weapon sprite",
      "load border sprite", "replace border sprite",
      "load portrait sprite", "replace portrait sprite",
      "free sprite", "place sprite", "set sprite visible",
      "set sprite palette", "clone sprite", "set sprite frame",
      "get sprite frame", "sprite frame count", "slice is sprite",
      "sprite layer"
      [Mike, James]
    * "slice x", "slice y", "set slice x", "set slice y", "slice width",
      "slice height", "set horiz align", "set vert align",
      "set horiz anchor", "set vert anchor", "free slice",
      "first child", "next sibling", "create container", "set parent",
      "check parentage", "slice screen x", "slice screen y",
      "slice is container", "create rect", "slice is rect",
      "set slice width", "set slice height", "get rect style",
      "set rect style", "get rect fgcol", "set rect fgcol",
      "get rect bgcol", "set rect bgcol", "get rect border",
      "set rect border", "get rect trans", "set rect trans",
      "first container child", "next container child",
      "first sprite child", "next sprite sibling", "first rect child",
      "next rect sibling", "realign slice", "center slice",
      "slice collide point", "slice collide", "slice contains",
      "set slice screen x", "set slice screen y", "clamp slice"
      [James]
    * "number from string" [James]

  * Vikings of Midgard

  * Stuff only Developers Will Notice
    * New slice routines for rectangular objects of various styles that
      can be organized into a tree and positioned and sized relative to
      one another. [Mike]
    * gfx_sdl backend flipping and fading problems fixed [James]
    * RPG format number has been incremented to 7 to provide
      forward-compat warnings when loading new RPG files into
      old versions of game [James]

October 03 2008 [xocolatl+]

  * Vikings of Midgard
    * Character portraits [Fenrir-Lunaris]
    * New spell quests [Fenrir-Lunaris]